# White2

./: CMakeClient.txt  CMakeGUI.txt  CMakeLists.txt  CMakeLists.txt~  CMakeNOGUI.txt  CMakeServer.txt  CMakeWorker.txt  client.cpp  main.cpp  main_nogui.cpp  server.cpp  worker.cpp
BRDFs/: BRDF.cpp  BRDF.h  CMakeLists.txt  GlossySpecular.cpp  GlossySpecular.h  Lambertian.cpp  Lambertian.h
Cameras/: CMakeLists.txt  Camera.cpp  Camera.h  CameraWorker.cpp  CameraWorker.h  Pinhole.cpp  Pinhole.h
Client/: CMakeLists.txt  WhiteClient.cpp  WhiteClient.h
GeometricObjects/: CMakeLists.txt  GeometricObject.cpp  GeometricObject.h
GeometricObjects/Primitives/: Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  SphereWireframe.cpp  SphereWireframe.h
Lights/: Ambient.cpp  Ambient.h  AmbientOccluder.cpp  AmbientOccluder.h  CMakeLists.txt  Light.cpp  Light.h  PointLight.cpp  PointLight.h
Materials/: CMakeLists.txt  CMakeLists.txt~  Material.cpp  Material.h  Matte.cpp  Matte.h  Phong.cpp  Phong.h  SolidColor.cpp  SolidColor.h
Network/: CMakeLists.txt  Client.cpp  Client.h  Message.cpp  Message.h  Server.cpp  Server.h  Worker.cpp  Worker.h
Network/Client/: CMakeLists.txt  Client.cpp  Client.h
Network/Server/: CMakeLists.txt  Server.cpp  Server.h
Network/Worker/: CMakeLists.txt  Worker.cpp  Worker.h
Samplers/: CMakeLists.txt  Jittered.cpp  Jittered.h  MultiJittered.cpp  MultiJittered.h  Regular.cpp  Regular.cpp~  Regular.h  Sampler.cpp  Sampler.h
Server/: CMakeLists.txt  WhiteServer.cpp  WhiteServer.h
Tracers/: CMakeLists.txt  MultipleObjects.cpp  MultipleObjects.h  RayCast.cpp  RayCast.h  SingleSphere.cpp  SingleSphere.h  Tracer.cpp  Tracer.h
Utilities/: CMakeLists.txt  Canvas.cpp  Canvas.h  Constants.h  Math.h  MessagePixel.h  MessageQueue.h  Normal.cpp  Normal.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  RGBColor.cpp  RGBColor.h  Ray.cpp  Ray.h  ShadeRec.cpp  ShadeRec.h  Vector3D.cpp  Vector3D.h
World/: CMakeLists.txt  CMakeLists.txt~  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
